# EfficientWord-Net

./: .gitignore  pyproject.toml
eff_word_net/: ibm_cloud_generate.py
