[tool.poetry]
name = "efficientword-net"
version = "1.0.3"
description = "Few Shot Learning based Hotword Detection Engine"
authors = ["ANT-BRaiN, Daniel Hackbarth"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "eff_word_net" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.26.0"
onnxruntime = "^1.15.1"
PyAudio = "^0.2.13"
numpy = "^1.24.0"
tflite-runtime = "^2.14.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
librosa = "^0.10.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
